Fix horizontal scroll on mobile

--- a/main.css
+++ b/main.css
@@ -686,6 +686,11 @@ input[type="submit"]:hover{
 
 @media screen and (max-width: 700px) {
 
+  html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+  }
+
   .menu-toggler{
     position: absolute;
     top: 2rem;
